# Quantitative-Financial-Research-Agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
agent/: __init__.py  callbacks.py  core.py  prompts.py
api/: app.py  auth_routes.py  routes.py
auth/: dependencies.py  jwt_utils.py
cli/: main.py
config/: settings.py
finance/: __init__.py  fetcher.py  metrics.py  optimizer.py  risk_profile.py
frontend/: app.js  index.html  style.css
schemas/: __init__.py  inputs.py  outputs.py
tests/: conftest.py  test_metrics.py  test_risk_profile.py  test_tools.py
tools/: __init__.py  correlation_analyzer.py  data_fetcher.py  news_sentiment.py  portfolio_analyzer.py  portfolio_optimizer.py  report_builder.py  risk_calculator.py  sec_rag.py
utils/: __init__.py  cache.py  charts.py  formatting.py
